# quant-strategies

./: .gitignore  REDMEE.md  main.py  pyproject.toml
backtest/: simple_backtest.py
strategies/: MACD.py  MACD_DIVERGENCE.py  MACD_RSI.py  MACD_SMA.py  NNP.py  RSI.py  SMA.py  risk_mng.py
