[project]
name = "quant-strategies"
version = "0.1.0"
description = ""
authors = [
    {name = "emiemme"}
]
requires-python = ">=3.13"
dependencies = [
    "keras (==3.12.0)",
    "matplotlib (==3.10.7)",
    "numpy (==2.2.6)",
    "pandas (==2.3.3)",
    "pandas-ta (==0.4.71b0)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.3)",
    "yfinance (==0.2.66)",
    "fredapi (==0.5.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
